# wegwart

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  readme.md  requirements.txt  scratch.txt  wegwart.cpp
.github/workflows/: .cmake.yml.swp  cmake.yml
src/: adapter.cpp  adapter.h
